--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,9 @@
 .bg-welcome {
   background-color: #17a2b8 !important;
 }
+
+.active {
+  border-radius: 25px !important;
+  border: none !important;
+  background-color: #a8d7db !important;
+}
